<resources>
    <string name="app_name">FE-216it02004112</string>
    <string name="input_patient_details">Please input your patients details</string>
    <string name="name_input_text">Name	of the Patient</string>
    <string name="address_input_text">Address of the Patient</string>
    <string name="age_input_text">Age of the Patient</string>
    <string name="gender_input_text">Gender of the Patient</string>
    <string name="save_button_text">Save</string>
    <string name="days_input_text">The number of days spent in the hospital</string>
    <string name="medication_input_text">"The amount of medication charges "</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">female</string>
    <string name="view_report">View Report</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="next_button_text">Next</string>
    <string name="surgical_input_text">"The amount of surgical charges "</string>
    <string name="lab_input_text">"The amount of lab fees "</string>
    <string name="rehab_input_text">"The amount of physical rehabilitation charges "</string>
</resources>