<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.mends4112.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/name_input_text"
        android:inputType="textPersonName"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/address_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/address_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/address_input_text"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/age_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <EditText
        android:id="@+id/age_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:hint="@string/age_input_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_input" />

    <RadioGroup
        android:id="@+id/gender_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:hint="@string/age_input_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_input" >
        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_female" />
    </RadioGroup>

    <Button
        android:id="@+id/next_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:paddingStart="32dp"
        android:paddingLeft="32dp"
        android:paddingEnd="32dp"
        android:paddingRight="32dp"
        android:text="@string/next_button_text"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
