<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.mends4112.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/days_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/days_input_text"
        android:inputType="number"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/medication_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/medication_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/medication_input_text"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/surgical_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/days_input" />

    <EditText
        android:id="@+id/surgical_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:hint="@string/surgical_input_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medication_input" />
    <EditText
        android:id="@+id/lab_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:hint="@string/lab_input_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surgical_input" />
    <EditText
        android:id="@+id/rehab_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:hint="@string/rehab_input_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lab_input" />

    <Button
        android:id="@+id/next_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:paddingStart="32dp"
        android:paddingLeft="32dp"
        android:paddingEnd="32dp"
        android:paddingRight="32dp"
        android:background="@drawable/button_outline"
        android:text="@string/next_button_text"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
